src/main/java/com/xiaoming/script/gen/MaScriptParser.java
// Generated from /home/mabaiming/work/src/ai/ma-script/src/main/resources/MaScriptParser.g4 by ANTLR 4.7.1
package com.xiaoming.script.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MaScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LinesComment=1, LineComment=2, Null=3, Bool=4, Int=5, Float=6, String=7, 
		BackStringFormatOpen=8, StringFormatOpen=9, WS=10, WhiteSpaces=11, LineEnd=12, 
		Not=13, Mult=14, Add=15, Relation=16, Eq=17, AssignAppend=18, Inc=19, 
		And=20, Or=21, Query=22, SquareOpen=23, SquareClose=24, Dot=25, Assign=26, 
		BlockOpen=27, BlockClose=28, ParenOpen=29, ParenClose=30, Colon=31, Comma=32, 
		Semicolon=33, Arrow=34, Var=35, Function=36, Return=37, If=38, Else=39, 
		For=40, Break=41, Continue=42, Id=43, StringFormatClose=44, IdInterp=45, 
		ExprInterpOpen=46, TextFormat=47, BackStringFormatClose=48, BackIdInterp=49, 
		BackExprInterpOpen=50, BackStringFormatSquare=51, BackTextFormat=52;
	public static final int
		RULE_sep = 0, RULE_array = 1, RULE_object = 2, RULE_ids = 3, RULE_program = 4, 
		RULE_stats = 5, RULE_stat = 6, RULE_lambdaParam = 7, RULE_lambdaBody = 8, 
		RULE_exprs = 9, RULE_stringFormatPart = 10, RULE_backStringFormatPart = 11, 
		RULE_singleExpr = 12;
	public static final String[] ruleNames = {
		"sep", "array", "object", "ids", "program", "stats", "stat", "lambdaParam", 
		"lambdaBody", "exprs", "stringFormatPart", "backStringFormatPart", "singleExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'null'", null, null, null, null, "'s`'", "'s\"'", null, 
		null, null, null, null, null, null, null, null, null, null, null, "'?'", 
		"'['", "']'", "'.'", "'='", "'{'", "'}'", "'('", "')'", "':'", "','", 
		"';'", "'->'", "'var'", "'function'", "'return'", "'if'", "'else'", "'for'", 
		"'break'", "'continue'", null, "'\"'", null, null, null, "'`'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LinesComment", "LineComment", "Null", "Bool", "Int", "Float", "String", 
		"BackStringFormatOpen", "StringFormatOpen", "WS", "WhiteSpaces", "LineEnd", 
		"Not", "Mult", "Add", "Relation", "Eq", "AssignAppend", "Inc", "And", 
		"Or", "Query", "SquareOpen", "SquareClose", "Dot", "Assign", "BlockOpen", 
		"BlockClose", "ParenOpen", "ParenClose", "Colon", "Comma", "Semicolon", 
		"Arrow", "Var", "Function", "Return", "If", "Else", "For", "Break", "Continue", 
		"Id", "StringFormatClose", "IdInterp", "ExprInterpOpen", "TextFormat", 
		"BackStringFormatClose", "BackIdInterp", "BackExprInterpOpen", "BackStringFormatSquare", 
		"BackTextFormat"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MaScriptParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MaScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SepContext extends ParserRuleContext {
		public TerminalNode Semicolon() { return getToken(MaScriptParser.Semicolon, 0); }
		public TerminalNode EOF() { return getToken(MaScriptParser.EOF, 0); }
		public SepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterSep(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitSep(this);
		}
	}

	public final SepContext sep() throws RecognitionException {
		SepContext _localctx = new SepContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sep);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==Semicolon) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode SquareOpen() { return getToken(MaScriptParser.SquareOpen, 0); }
		public TerminalNode SquareClose() { return getToken(MaScriptParser.SquareClose, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitArray(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_array);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			match(SquareOpen);
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Null) | (1L << Bool) | (1L << Int) | (1L << Float) | (1L << String) | (1L << BackStringFormatOpen) | (1L << StringFormatOpen) | (1L << Not) | (1L << Add) | (1L << Inc) | (1L << SquareOpen) | (1L << BlockOpen) | (1L << ParenOpen) | (1L << Function) | (1L << Id))) != 0)) {
				{
				setState(29);
				exprs();
				}
			}

			setState(32);
			match(SquareClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public TerminalNode BlockOpen() { return getToken(MaScriptParser.BlockOpen, 0); }
		public List<TerminalNode> Id() { return getTokens(MaScriptParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(MaScriptParser.Id, i);
		}
		public List<TerminalNode> Colon() { return getTokens(MaScriptParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(MaScriptParser.Colon, i);
		}
		public List<SingleExprContext> singleExpr() {
			return getRuleContexts(SingleExprContext.class);
		}
		public SingleExprContext singleExpr(int i) {
			return getRuleContext(SingleExprContext.class,i);
		}
		public TerminalNode BlockClose() { return getToken(MaScriptParser.BlockClose, 0); }
		public List<TerminalNode> Comma() { return getTokens(MaScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MaScriptParser.Comma, i);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitObject(this);
		}
	}

	public final ObjectContext object() throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_object);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(BlockOpen);
			setState(35);
			match(Id);
			setState(36);
			match(Colon);
			setState(37);
			singleExpr(0);
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(38);
					match(Comma);
					setState(39);
					match(Id);
					setState(40);
					match(Colon);
					setState(41);
					singleExpr(0);
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Comma) {
				{
				setState(47);
				match(Comma);
				}
			}

			setState(50);
			match(BlockClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdsContext extends ParserRuleContext {
		public List<TerminalNode> Id() { return getTokens(MaScriptParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(MaScriptParser.Id, i);
		}
		public List<TerminalNode> Comma() { return getTokens(MaScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MaScriptParser.Comma, i);
		}
		public IdsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ids; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterIds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitIds(this);
		}
	}

	public final IdsContext ids() throws RecognitionException {
		IdsContext _localctx = new IdsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ids);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(Id);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(53);
				match(Comma);
				setState(54);
				match(Id);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MaScriptParser.EOF, 0); }
		public StatsContext stats() {
			return getRuleContext(StatsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Null) | (1L << Bool) | (1L << Int) | (1L << Float) | (1L << String) | (1L << BackStringFormatOpen) | (1L << StringFormatOpen) | (1L << Not) | (1L << Add) | (1L << Inc) | (1L << SquareOpen) | (1L << BlockOpen) | (1L << ParenOpen) | (1L << Semicolon) | (1L << Var) | (1L << Function) | (1L << Return) | (1L << If) | (1L << For) | (1L << Break) | (1L << Continue) | (1L << Id))) != 0)) {
				{
				setState(60);
				stats();
				}
			}

			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatsContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public StatsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stats; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterStats(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitStats(this);
		}
	}

	public final StatsContext stats() throws RecognitionException {
		StatsContext _localctx = new StatsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stats);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				stat();
				}
				}
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Null) | (1L << Bool) | (1L << Int) | (1L << Float) | (1L << String) | (1L << BackStringFormatOpen) | (1L << StringFormatOpen) | (1L << Not) | (1L << Add) | (1L << Inc) | (1L << SquareOpen) | (1L << BlockOpen) | (1L << ParenOpen) | (1L << Semicolon) | (1L << Var) | (1L << Function) | (1L << Return) | (1L << If) | (1L << For) | (1L << Break) | (1L << Continue) | (1L << Id))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class VarStatContext extends StatContext {
		public TerminalNode Var() { return getToken(MaScriptParser.Var, 0); }
		public List<TerminalNode> Id() { return getTokens(MaScriptParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(MaScriptParser.Id, i);
		}
		public List<TerminalNode> Assign() { return getTokens(MaScriptParser.Assign); }
		public TerminalNode Assign(int i) {
			return getToken(MaScriptParser.Assign, i);
		}
		public List<SingleExprContext> singleExpr() {
			return getRuleContexts(SingleExprContext.class);
		}
		public SingleExprContext singleExpr(int i) {
			return getRuleContext(SingleExprContext.class,i);
		}
		public TerminalNode Semicolon() { return getToken(MaScriptParser.Semicolon, 0); }
		public List<TerminalNode> Comma() { return getTokens(MaScriptParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MaScriptParser.Comma, i);
		}
		public VarStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterVarStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitVarStat(this);
		}
	}
	public static class ReturnStatContext extends StatContext {
		public TerminalNode Return() { return getToken(MaScriptParser.Return, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public ReturnStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterReturnStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitReturnStat(this);
		}
	}
	public static class BreakStatContext extends StatContext {
		public TerminalNode Break() { return getToken(MaScriptParser.Break, 0); }
		public TerminalNode Semicolon() { return getToken(MaScriptParser.Semicolon, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public BreakStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterBreakStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitBreakStat(this);
		}
	}
	public static class BlockStatContext extends StatContext {
		public TerminalNode BlockOpen() { return getToken(MaScriptParser.BlockOpen, 0); }
		public TerminalNode BlockClose() { return getToken(MaScriptParser.BlockClose, 0); }
		public StatsContext stats() {
			return getRuleContext(StatsContext.class,0);
		}
		public BlockStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterBlockStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitBlockStat(this);
		}
	}
	public static class ForItStatContext extends StatContext {
		public TerminalNode For() { return getToken(MaScriptParser.For, 0); }
		public TerminalNode ParenOpen() { return getToken(MaScriptParser.ParenOpen, 0); }
		public TerminalNode Id() { return getToken(MaScriptParser.Id, 0); }
		public TerminalNode Assign() { return getToken(MaScriptParser.Assign, 0); }
		public List<SingleExprContext> singleExpr() {
			return getRuleContexts(SingleExprContext.class);
		}
		public SingleExprContext singleExpr(int i) {
			return getRuleContext(SingleExprContext.class,i);
		}
		public List<TerminalNode> Semicolon() { return getTokens(MaScriptParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(MaScriptParser.Semicolon, i);
		}
		public TerminalNode ParenClose() { return getToken(MaScriptParser.ParenClose, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode Var() { return getToken(MaScriptParser.Var, 0); }
		public ForItStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterForItStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitForItStat(this);
		}
	}
	public static class ForInStatContext extends StatContext {
		public TerminalNode For() { return getToken(MaScriptParser.For, 0); }
		public TerminalNode ParenOpen() { return getToken(MaScriptParser.ParenOpen, 0); }
		public TerminalNode Id() { return getToken(MaScriptParser.Id, 0); }
		public TerminalNode Colon() { return getToken(MaScriptParser.Colon, 0); }
		public SingleExprContext singleExpr() {
			return getRuleContext(SingleExprContext.class,0);
		}
		public TerminalNode ParenClose() { return getToken(MaScriptParser.ParenClose, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public TerminalNode Var() { return getToken(MaScriptParser.Var, 0); }
		public ForInStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterForInStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitForInStat(this);
		}
	}
	public static class ContinuekStatContext extends StatContext {
		public TerminalNode Continue() { return getToken(MaScriptParser.Continue, 0); }
		public TerminalNode Semicolon() { return getToken(MaScriptParser.Semicolon, 0); }
		public ContinuekStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterContinuekStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitContinuekStat(this);
		}
	}
	public static class IfStatContext extends StatContext {
		public TerminalNode If() { return getToken(MaScriptParser.If, 0); }
		public TerminalNode ParenOpen() { return getToken(MaScriptParser.ParenOpen, 0); }
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public TerminalNode ParenClose() { return getToken(MaScriptParser.ParenClose, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode Else() { return getToken(MaScriptParser.Else, 0); }
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitIfStat(this);
		}
	}
	public static class ExprsStatContext extends StatContext {
		public ExprsContext exprs() {
			return getRuleContext(ExprsContext.class,0);
		}
		public SepContext sep() {
			return getRuleContext(SepContext.class,0);
		}
		public ExprsStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterExprsStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitExprsStat(this);
		}
	}
	public static class FuncDefStatContext extends StatContext {
		public TerminalNode Function() { return getToken(MaScriptParser.Function, 0); }
		public TerminalNode Id() { return getToken(MaScriptParser.Id, 0); }
		public TerminalNode ParenOpen() { return getToken(MaScriptParser.ParenOpen, 0); }
		public TerminalNode ParenClose() { return getToken(MaScriptParser.ParenClose, 0); }
		public TerminalNode BlockOpen() { return getToken(MaScriptParser.BlockOpen, 0); }
		public TerminalNode BlockClose() { return getToken(MaScriptParser.BlockClose, 0); }
		public IdsContext ids() {
			return getRuleContext(IdsContext.class,0);
		}
		public StatsContext stats() {
			return getRuleContext(StatsContext.class,0);
		}
		public FuncDefStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterFuncDefStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitFuncDefStat(this);
		}
	}
	public static class EmptyStatContext extends StatContext {
		public TerminalNode Semicolon() { return getToken(MaScriptParser.Semicolon, 0); }
		public EmptyStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).enterEmptyStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MaScriptParserListener ) ((MaScriptParserListener)listener).exitEmptyStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stat);
		int _la;
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				_localctx = new BlockStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				match(BlockOpen);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Null) | (1L << Bool) | (1L << Int) | (1L << Float) | (1L << String) | (1L << BackStringFormatOpen) | (1L << StringFormatOpen) | (1L << Not) | (1L << Add) | (1L << Inc) | (1L << SquareOpen) | (1L << BlockOpen) | (1L << ParenOpen) | (1L << Semicolon) | (1L << Var) | (1L << Function) | (1L << Return) | (1L << If) | (1L << For) | (1L << Break) | (1L << Continue) | (1L << Id))) != 0)) {
					{
					setState(71);
					stats();
					}
				}
